--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["next/core-web-vitals", "next/typescript", "prettier"],
+	"extends": ["next/core-web-vitals", "next/typescript", "prettier", "plugin:@tanstack/query/recommended"],
 	"rules": {
 		"@typescript-eslint/no-explicit-any": "off"
 	}
