--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
 	"trailingComma": "all",
 	"tabWidth": 2,
 	"endOfLine": "auto",
-	"useTabs": true,
+	"useTabs": false,
 	"singleQuote": true,
 	"printWidth": 120,
 	"jsxSingleQuote": true,
