--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.9",
+    "@tanstack/react-query-devtools": "^5.59.9",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
@@ -23,9 +26,11 @@
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
